# todo

./: README.md  com.github.fkinoshita.todo.json  meson.build
data/: com.github.fkinoshita.todo.appdata.xml.in  com.github.fkinoshita.todo.desktop.in  com.github.fkinoshita.todo.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: main.c  meson.build  todo-application.c  todo-application.h  todo-item.c  todo-item.h  todo-item.ui  todo-window.c  todo-window.h  todo-window.ui  todo.gresource.xml
